--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/StudentFinal
-spring.datasource.username=postgres
-spring.datasource.password=Preethu$123
+server.port=${PORT:8080}
+
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/StudentFinal}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:Preethu$123}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
